# Enterprise-RAG-Knowledge-Platform

./: .gitignore  Makefile  README.md  conversation_1_data.txt
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.mcp  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0002_add_document_status.py
backend/app/: cli.py  config.py  main.py
backend/app/api/v1/: health.py
backend/app/auth/: __init__.py  dependencies.py
backend/app/db/: models.py  session.py
backend/app/eval/: __init__.py  evaluator.py  golden.py  monitoring.py  router.py  runner.py
backend/app/ingestion/: __init__.py  chunker.py  parsers.py  pipeline.py  router.py
backend/app/observability/: __init__.py  logging.py  metrics.py  tracing.py
backend/app/providers/: __init__.py  interfaces.py
backend/app/providers/embeddings/: __init__.py  gemini.py  nvidia_nim.py  openai.py  sentence_transformers.py  vertex.py
backend/app/providers/llm/: claude.py  gemini.py  nvidia_nim.py  ollama.py  openai.py  vertex.py
backend/app/query/: __init__.py  pipeline.py  prompts.py  reranker.py  router.py
backend/rag_mcp/: __init__.py  __main__.py  server.py
backend/tests/: test_auth.py  test_chunker.py  test_evaluator.py  test_golden.py  test_health.py  test_providers.py  test_rbac_isolation.py
docs/: README.md  architecture.md  gcp-migration.md
evals/: golden_qa.jsonl
frontend/: Dockerfile  next.config.js  package.json  tailwind.config.ts
infra/: .env.example  docker-compose.yml  init.sql
(+7 files in other folders)
