[project]
name = "rag-platform-backend"
version = "1.0.0"
description = "Enterprise RAG Knowledge Platform — Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
    "google-genai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "pgvector>=0.3.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-otlp-proto-http>=1.24.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "openai>=1.30.0",
    "anthropic>=0.34.0",
    "mcp>=1.0.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=24.0.0",
    "mypy>=1.11.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
